cluster-setup/kubenav/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: kubenav
  namespace: kubenav
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: kubenav.57a7127dd6cb452b952f.francecentral.aksapp.io
    http:
      paths:
      - backend:
          serviceName: kubenav
          servicePort: http
